--- a/app/page.module.css
+++ b/app/page.module.css
@@ -79,6 +79,13 @@
   text-align: center;
 }
 
+.spinner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .loading {
   width: 50px;
   height: 50px;
@@ -86,6 +93,21 @@
   border-top: 5px solid #5e6b9e;
   border-radius: 50%;
   animation: spin 1s linear infinite;
+}
+
+.text {
+  margin-top: 10px; /* Ajusta el espaciado según lo necesites */
+  font-size: 34px;
+  color: white;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .buttonContainer {
